objects/advpm__Advologix_Trigger_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>System settings used by Advologix internally.</description>
    <fields>
        <fullName>advpm__Disable_Account_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Account Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_ActionPlanTaskTemplate_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ActionPlanTaskTemplate Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_ActionPlan_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ActionPlan Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_AdvoDocTemplate_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable AdvoDocTemplate Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_AssignmentRule_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable AssignmentRule Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Attachment_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Attachment Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Budget_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Budget Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Contact_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Contact Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_ContentVersion_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable ContentVersion Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_CrossReferenceMatter_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable CrossReferenceMatter Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_DetailBudget_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable DetailBudget Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Event_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Event Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_FeedItem_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable FeedItem Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_MatterLegalHoldAck_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable MatterLegalHoldAck Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Matter_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Matter Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Note_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Note Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_OfferAndDemand_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable OfferAndDemand Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Participant_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Participant Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_RateGroup_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable RateGroup Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Rate_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Rate Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_SummaryBudget_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable SummaryBudget Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Task_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Task Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_Time_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Time Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>advpm__Disable_User_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable User Trigger</label>
        <type>Checkbox</type>
    </fields>
    <label>Advologix Trigger Settings</label>
</CustomObject>